Use fixture instead of client in fetching requests tests CIRC-596